<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:padding="16dp"
            android:src="@drawable/back_icon"
            app:tint="@color/black"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/world_of_music"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favourites_btn"
            android:padding="8dp"
            android:src="@drawable/favorite_empty_icon"
            app:tint="@color/black" />
    </LinearLayout>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgPA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="20dp"
        android:src="@drawable/splash_screen"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="5dp" />

    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        android:maxLines="1"
        android:gravity="center"
        android:text="@string/song_name"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previousBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_chevron_left_24"
            app:iconSize="40dp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24sp"
            android:backgroundTint="@android:color/holo_red_light"
            app:icon="@drawable/ic_baseline_pause_24"
            app:iconSize="50dp"
            app:iconTint="@color/white"
            app:shapeAppearanceOverlay="@style/curved" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_chevron_right_24"
            app:iconSize="40dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_margin="24sp"
        android:layout_weight="1"
        android:gravity="center"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/startTvSeekbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarPlayActivity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/finishTvSeekbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loading"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/repeat_icon"
            app:tint="@color/cool_pink" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/equalizer_icon"
            app:tint="@color/cool_pink" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_timer_24"
            app:tint="@color/cool_pink" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_share_24"
            app:tint="@color/cool_pink" />

    </LinearLayout>
</LinearLayout>